--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,3 +6,16 @@
     padding: 0;
     overflow: hidden;
 }
+
+#customScene {
+    width: 50vw;
+    height: 50vh;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+    #customScene:focus {
+        outline: none;
+    }
